--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		<div id="colorlib-about">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">About</h2>
+					<h2 class="bold">Информация</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-5 animate-box">
@@ -129,24 +129,24 @@
 						<div class="about-desc">
 							<div class="owl-carousel3">
 								<div class="item">
-									<h2><span>Noah</span><span>Henderson</span></h2>
+									<h2><span>Иван</span><span>Андреев</span></h2>
 								</div>
 								<div class="item">
-									<h2><span>I'm</span><span>A Designer</span></h2>
+									<h2><span>Немного</span><span>Обо Мне</span></h2>
 								</div>
 							</div>
 							<div class="desc">
 								<div class="rotate">
-									<h2 class="heading">About</h2>
+									<h2 class="heading">Информация</h2>
 								</div>
-								<p>A small river named Duden <a href="#">flows by their place</a> and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life.</p>
+								<p>Учусь в колледже <a href="#">МИПКИФ</a>, имею опыт в сфере вёрстки, корректуры, редактуры.</p>
 								<p class="colorlib-social-icons">
 									<a href="#"><i class="icon-facebook4"></i></a>
 									<a href="#"><i class="icon-twitter3"></i></a>
 									<a href="#"><i class="icon-googleplus"></i></a>
 									<a href="#"><i class="icon-dribbble2"></i></a>
 								</p>
-								<p><a href="#" class="btn btn-primary btn-outline">Contact Me!</a></p>
+								<p><a href="#" class="btn btn-primary btn-outline">Свяжитесь со мной!</a></p>
 							</div>
 						</div>
 					</div>
@@ -164,28 +164,28 @@
 							<div class="one-third">
 								<div class="row">
 									<div class="col-md-12 col-md-offset-0 animate-box intro-heading">
-										<span>My Services</span>
-										<h2>Here Are Some of My Skills</h2>
+										<span>Услуги</span>
+										<h2>Мои профессиональные навыки</h2>
 									</div>
 								</div>
 								<div class="row">
 									<div class="col-md-12">
 										<div class="rotate">
-											<h2 class="heading">Services</h2>
+											<h2 class="heading">Услуги</h2>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="services animate-box">
-											<h3>1 - Graphic Design</h3>
+											<h3>1 - Корректура изданий</h3>
 											<ul>
-												<li>UI Design</li>
-												<li>Website &amp; Digital Design</li>
-												<li>Brading &amp; Visual Identity</li>
-												<li>Print Design</li>
+												<li>Веб-издания</li>
+												<li>Периодические издания</li>
+												<li>Корректура технических изданий</li>
+												<li>Подготовка к печати</li>
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>3 - Front End Development</h3>
+											<!--<h3>3 - Front End Development</h3>
 											<ul>
 												<li>HTML / CSS</li>
 												<li>JS &amp; Jquery Startup</li>
@@ -210,7 +210,7 @@
 											<ul>
 												<li>Sales Marketing</li>
 												<li>Invoice</li>
-												<li>eCommerce</li>
+												<li>eCommerce</li>-->
 											</ul>
 										</div>
 									</div>
