--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Noah Template</title>
+	<title>Иван Андреев</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -66,12 +66,12 @@
 				<div class="row">
 					<div class="col-md-12">
 						<ul>
-							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="services.html">Services</a></li>
-							<li><a href="work.html">Work</a></li>
-							<li><a href="blog.html">Blog</a></li>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
+							<li class="active"><a href="index.html">Начало</a></li>
+							<li><a href="services.html">Услуги</a></li>
+							<li><a href="work.html">Работы</a></li>
+							<li><a href="blog.html">Блог</a></li>
+							<li><a href="about.html">Информация</a></li>
+							<li><a href="contact.html">Контакты</a></li>
 						</ul>
 					</div>
 				</div>
@@ -102,7 +102,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="index.html"><span>No</span><span>ah</span></a>
+							<a class="colorlib-logo" href="index.html"><span>fgs</span><span>fds</span></a>
 						</div>
 						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 					</div>
@@ -132,7 +132,7 @@
 									<h2><span>Иван</span><span>Андреев</span></h2>
 								</div>
 								<div class="item">
-									<h2><span>Немного</span><span>Обо Мне</span></h2>
+									<h2><span>Немного</span><span>Обо мне</span></h2>
 								</div>
 							</div>
 							<div class="desc">
@@ -156,7 +156,7 @@
 		<div id="colorlib-services">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Services</h2>
+					<h2 class="bold">Услуги</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12">
@@ -227,7 +227,7 @@
 		<div id="colorlib-work">
 			<div class="container">
 				<div class="row text-center">
-					<h2 class="bold">Works</h2>
+					<h2 class="bold">Работы</h2>
 				</div>
 				<div class="row">
 					<div class="col-md-12 col-md-offset-0 text-center animate-box intro-heading">
